--- a/public/assets/scss/utils/_colors.scss
+++ b/public/assets/scss/utils/_colors.scss
@@ -7,7 +7,7 @@ $colors: (
         "body-text":#858585,
         "body": #0D0D0D,
     ),
-    theme: ("1":#FF589B,
+    theme: ("1":#6C00A8,
         "2":#69E7CB,
         "3":#FBC21E,
     ),
