--- a/public/assets/scss/components/_offcanvas.scss
+++ b/public/assets/scss/components/_offcanvas.scss
@@ -331,7 +331,7 @@
 .header__hamburger {
     display: inline-flex;
 
-    @media #{$larger,$xxxl} {
+    @media #{$larger, $xxxl,$xxl ,$xl} {
         display: none;
     }
 }
